--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,10 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
 
+    // Redis
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    implementation 'org.redisson:redisson-spring-boot-starter:3.27.1'
+
 // JUNIT 테스트를 위한 기본 의존성
 //    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.2'
 //    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.2'
@@ -53,6 +57,8 @@ dependencies {
 // DB
     runtimeOnly 'com.mysql:mysql-connector-j'
     testRuntimeOnly 'com.h2database:h2'
+
+
 }
 
 tasks.named('test') {
