--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,10 @@ repositories {
 dependencies {
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
 
-// SpringBoot 의존성 추가
+    //redis
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
+    // SpringBoot 의존성 추가
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
@@ -26,7 +29,7 @@ dependencies {
 
     // Redis
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
-//    implementation 'org.redisson:redisson-spring-boot-starter:3.27.1'
+    //    implementation 'org.redisson:redisson-spring-boot-starter:3.27.1'
 
 // JUNIT 테스트를 위한 기본 의존성
 //    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.2'
