--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,12 @@ repositories {
 }
 
 dependencies {
+
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
+
+    //LocalDateTime 직렬화
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
+    implementation 'com.fasterxml.jackson.core:jackson-databind'
 
 // SpringBoot 의존성 추가
     implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -26,6 +31,7 @@ dependencies {
 
     // Redis
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    implementation 'org.redisson:redisson-spring-boot-starter:3.27.1'
 
 // JUNIT 테스트를 위한 기본 의존성
 //    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.2'
