--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,5 @@ spring.jpa.show-sql=true
 spring.cache.type=redis
 spring.data.redis.host=127.0.0.1
 spring.data.redis.port=6379
+
+spring.messages.basename=message
